--- a/src/Kontext.Docu.Web.Portals/appsettings.json
+++ b/src/Kontext.Docu.Web.Portals/appsettings.json
@@ -15,8 +15,8 @@
     "ShowNewDomainReminder": false,
     "AppVersion": "1.0.0-alpha.1",
     "SiteAuthor": "kontext.tech",
-    "SiteKeyWords": "kontext, CMS, .net core",
-    "SiteDescription": "CMS for kontext.",
+    "SiteKeyWords": "Kontext, Docu, CMS, .NET Core",
+    "SiteDescription": "Kontext Docu CMS",
     "ImageFolderPath": "./images/uploaded/",
     "DefaultApplicationId": "00000000-0000-0000-0000-000000000000",
     "SecurityConfig": {
