Added new configurations for database type; seperate core and docu database configuration.

--- a/src/Kontext.Docu.Web.Portals/appsettings.json
+++ b/src/Kontext.Docu.Web.Portals/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Filename=App_Data/kontext.db"
+    "DefaultConnection": "Filename=App_Data/kontext.db",
+    "KontextCoreConnection": "Filename=App_Data/kontext.db",
+    "KontextDocuConnection": "Filename=App_Data/kontext.db"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -22,6 +24,10 @@
     "SecurityConfig": {
       "UserRoleName": "User",
       "AdministratorRoleName": "Administrator"
+    },
+    "DatabaseConfig": {
+      "CoreDbType": "SQLite",
+      "DocuDbType": "SQLite"
     },
     "BlogConfig": {
       "BlogPostCountPerPage": "10",
